# mcp-sdk

./: .editorconfig  README.md  mcp_config.yaml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-test.txt  scratch_mcp.py  setup.py  test_import.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
examples/: basic_usage.py  custom_client_info.py  server_example.py
mcp_sdk/: __init__.py  cli.py  client.py  config.py  exceptions.py  messages.py  models.py  resources.py  schema.py  server.py  server_config.py
mcp_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mcp_sdk/products/: __init__.py
mcp_sdk/products/audio/: __init__.py
mcp_sdk/products/image/: __init__.py  client.py  models.py  tools.py
mcp_sdk/products/text/: __init__.py  client.py  models.py  tools.py
mcp_sdk/products/video/: __init__.py
mcp_sdk/server/: runner.py
mcp_sdk/server_utils/: runner.py
mcp_sdk/shared/: _httpx_utils.py  auth.py  exceptions.py  memory.py  message.py  progress.py  session.py  version.py
mcp_sdk/users/: __init__.py  auth.py  client.py  models.py
tests/: conftest.py  requirements-test.txt
tests/integration/: test_api.py
tests/performance/: test_load.py  test_load_balancing.py
tests/unit/: test_cli.py  test_client.py  test_config.py  test_exceptions.py  test_messages.py  test_resources.py  test_server.py
tests/utils/: __init__.py  async_utils.py
